<resources>
    <string name="app_name">ChatBrainy</string>
    <string name="continue_">Continuar</string>

    <string name="titleOnBoarding1">Vamos começar!</string>
    <string name="titleOnBoarding2">Como funciona?</string>
    <string name="titleOnBoarding3">Pergunte o que quiser</string>
    <string name="titleOnBoarding4">Verifique a informação</string>

    <string name="textOnBoarding1">Pergunte o que quiser e espere uma resposta.</string>
    <string name="textOnBoarding2">A Inteligência Artificial interage de forma conversacional. O formato de diálogo permite que a IA responda a todo tipo de perguntas.</string>
    <string name="textOnBoarding3">Faça qualquer tipo de pergunta! Desde correção gramatical, ideias para projetos, até explicação de códigos de programação. </string>
    <string name="textOnBoarding4">Antes de compartilhar qualquer informação criada por meio de Inteligência Artificial, verifique se ela é verdadeira. </string>

    <string name="nextOnBoarding1">Iniciar</string>
    <string name="nextOnBoarding2">Próximo</string>

    <string name="textRequest">Pergunte algo</string>
    <string name="sendButton">Send</string>
    <string name="settingsButton">Settings</string>

    <!--    MenuFragment-->
    <string name="settings">Configurações</string>
    <string name="chat">Chat</string>
    <string name="about">Sobre</string>
    <string name="policy">Política de uso</string>
    <string name="help">Ajuda</string>
    <string name="exit">Sair</string>
    <string name="accountActive">Account Active</string>

    <!--    AboutFragment-->
    <string name="aboutText">
        Somos uma empresa que acredita na criação de soluções inovadoras e de qualidade para nossos clientes. Estamos sempre à procura de novas tecnologias para melhorar a experiência de nossos usuários.\n\nNo desenvolvimento desse aplicativo, utilizamos uma das tecnologias da OpenAI, o ChatGPT.\n\nEsta tecnologia nos permite criar chatbots inteligentes que podem ajudar os usuários a encontrar as respostas que precisam de maneira mais eficiente.\n\nSegundo a OpenAI, treinaram o modelo usando Reinforcement Learning from Human Feedback (RLHF), usando os mesmos métodos do InstructGPT,mas com pequenas diferenças na configuração da coleta de dados.\n\nPara mais informações, acesse: \nhttps://openai.com/blog/chatgpt/\n\nSe você estiver interessado em saber mais sobre como usamos a tecnologia de inteligência artificial da OpenAI ChatGPT,entre em contato conosco, estamos sempre prontos para ajudar!</string>

    <!--    HelpFragment-->
    <string name="helptext">
        Para melhor desempenho da ferramenta, aqui estão algumas dicas para se usar.\n\nSeja claro e objetivo com seu texto de entrada.\n\nUtilize pontuações e acentuação para que a Inteligência Artificial compreenda o que você quer dizer.\n\nAlgumas solicitações que aparentam ser mais complexas podem levar mais tempo até retornar a resposta.\n\nSempre confira se as informações são verdadeiras antes de compartilhar com alguém.\n\nNo caso de erros frequentes, entre em contato com o desenvolvedor.\n\nOs dados que a IA possui são interrompidos em 2021, então pode não ter conhecimento dos eventos atuais.
    </string>

    <!--    PolicyFragment-->
    <string name="policytext">
        A nossa plataforma é destinada ao uso de conteúdo de forma responsável e amigável. Não é permitido o uso da plataforma para gerar os seguintes tipos de conteúdo:\n\nÓdio:\nConteúdo que expressa, incita ou promove o ódio com base na identidade\n\nAssédio:\nConteúdo que pretende assediar, ameaçar ou intimidar um indivíduo\n\nViolência:\nConteúdo que promova ou glorifique a violência ou celebre o sofrimento ou a humilhação de outras pessoas\n\nAuto-mutilação:\nConteúdo que promova, encoraje ou retrate atos de autoagressão, como suicídio, corte e distúrbios alimentares\n\nSexual:\nConteúdo destinado a despertar excitação sexual, como a descrição de atividade sexual ou que promova serviços sexuais (excluindo educação sexual e bem-estar)\n\nPolítico:\nConteúdo que tenta influenciar o processo político ou ser usado para fins de campanha\n\nSpam:\nConteúdo em massa não solicitado\n\nDecepção:\nConteúdo falso ou enganoso, como tentativa de fraudar indivíduos ou espalhar desinformação\n\nMalware:\nConteúdo que tenta gerar ransomware, keyloggers, vírus ou outro software destinado a impor algum nível de dano\n\nA violação dessa política pode resultar em sanções, incluindo, mas não limitadas, à suspensão ou cancelamento da conta.
    </string>

    <!--    ChatFragment-->
    <string name="model">Modelo</string>
    <string-array name="model_list">
        <item>text-davinci-003</item>
        <item>text-curie-001</item>
        <item>text-babbage-001</item>
        <item>text-ada-001</item>
    </string-array>

    <string-array name="text_model_list">
        <item>Pode executar qualquer tarefa que outros modelos possam executar, geralmente com maior qualidade, maior saída e melhor seguimento de instruções. Também suporta a inserção de conclusões dentro do texto.</item>
        <item>Muito capaz, mas mais rápido e com custo menor que Davinci.</item>
        <item>Capaz de tarefas diretas, muito rápidas e de baixo custo.</item>
        <item>Capaz de tarefas muito simples, geralmente o modelo mais rápido e de menor custo.</item>
    </string-array>

    <string name="temperature">Temperatura</string>
    <string name="maximum_length">Extensão Máxima</string>

    <string name="help_temperature">Controla a aleatoriedade: Reduzindo os resultados em conclusões menos aleatórias. À medida que a temperatura se aproxima de zero,mais o modelo se tornará determinístico e repetitivo.</string>
    <string name="help_length">O número máximo de tokens a serem gerados. As solicitações podem usar até 1000 tokens compartilhados entre o texto de entrada e a conclusão. (Um token corresponde aproximadamente a 3 caracteres para texto em PT-BR).</string>

    <string name="btn_reset">Restaurar</string>
    <string name="btn_save">Salvar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Login Activity-->
    <string name="hintemail">EMAIL</string>
    <string name="hintpassword">SENHA</string>
    <string name="btnLogin">ENTRAR</string>
    <string name="btnForget">Esqueceu a senha?</string>
    <string name="txtLoginSignup">Não possui conta?</string>
    <string name="btnLoginSignup">Cadastre-se</string>

    <!--    Signup Activity-->
    <string name="createAccount">Criar Conta</string>
    <string name="hintname">NOME</string>
    <string name="hintphone">CELULAR</string>
    <string name="hintconfirmpassword">CONFIRME A SENHA</string>
    <string name="btnSignup">Cadastrar</string>
    <string name="txtSignin">Já possui uma conta?</string>
    <string name="btnSignin">Entre aqui</string>

    <!--    Error Messages-->
    <string-array name="messages">
        <item>Preencha todos os campos</item>
        <item>As senhas não coincidem</item>
        <item>Número inválido</item>
        <item>Senhas precisam ter no mínimo 8 caracteres</item>
        <item>Esta conta ja foi cadastrada</item>
        <item>Email inválido</item>
        <item>Erro ao criar conta</item>
        <item>Cadastro realizado com sucesso</item>
        <item>Erro ao logar o usuário</item>
    </string-array>

<!--    Recovery Activity-->
    <string name="text_recovery">Insira o seu e-mail de cadastro e enviaremos instruções para você.</string>
    <string name="btn_recovery">Enviar</string>
</resources>